1998-04-05  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_utils.adb: (Locate) When locating executable, add executable
 	suffix.

1998-03-30  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_check.adb: Two major problems have been detected. First,
 	gnatmake has two problems. First, it doesn't detect when an ali
 	has already been loaded. Second, when an obsolete ali is loaded,
 	it is not replaced by the good one that has just been
 	compiled. Second, file stamp comparisons are completly wrong
 	because of the new implementation (x = y iff |x - y| <=
 	2). Compile_Sources gets confused because of this. For all these
 	reasons, we don't use file stamp comparisons from osint. To load
 	the ali files in the ali table, we recompile everything using
 	Compile_Sources, we reset all the tables and then we reload
 	everything. During reload, we compute the most recent file from
 	which a unit depend. For this, we use Ofile_Full_Name from
	ALIs_Record to store the more recent file.
	
	* xe_stubs.adb: Move some verbose messages into debug
	messages. Don't use Ofile_Full_Name anymore in Create_Stub.

	* xe_back.adb: Move some verbose messages into debug messages.

1998-03-24  Laurent Pautet  <pautet@dorine.enst.fr>

	* xe_stubs.adb: Call Establish_RPC_Receiver from partition.adb
	in order to prevent GARLIC from having to do it itself and to
	introduce a dependency from System.RPC.

1998-03-23  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_check.adb: Improve recompilation mode (Ada lib).

Sat Mar 21 22:38:35 1998  Laurent Pautet  <pautet@paris.act-europe.fr>

	* xe_utils.adb: Don't include GARLIC as Ada library.

	* xe_usage.adb: Update usage.

	* xe_stubs.adb: Rename object file when RCI spec and body file
 	name are different (gnat.adc).

1998-03-20  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.ads, xe_utils.adb: Add Dir to build concatenate several
 	strings and name_ids with directory separator in between. Change